nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service  # Имя Service
spec:
  selector:
    app: nginx  # Селектор для подключения к подам с меткой app: nginx
  ports:
    - protocol: TCP
      port: 80  # Порт, на котором Service будет доступен
      targetPort: 80  # Порт контейнера, на который будет перенаправляться трафик
